// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compiler > . 1`] = `
{
  "candidates": [
    "bg-linear-to-t",
    "from-sky-50-50",
    "to-primary-50-50",
    "animate-spin",
  ],
  "css": "@layer properties, theme, base, components, utilities;
@layer properties {
  @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
    *, ::before, ::after, ::backdrop {
      --tw-gradient-position: initial;
      --tw-gradient-from: #0000;
      --tw-gradient-via: #0000;
      --tw-gradient-to: #0000;
      --tw-gradient-stops: initial;
      --tw-gradient-via-stops: initial;
      --tw-gradient-from-position: 0%;
      --tw-gradient-via-position: 50%;
      --tw-gradient-to-position: 100%;
    }
  }
}

@layer theme {
  :where(:root,:host) {
    --animate-spin: spin 1s linear infinite;
  }
}

@layer utilities {
  .animate-spin {
    animation: var(--animate-spin);
  }
  .bg-linear-to-t {
    --tw-gradient-position: to top;
    @supports (background-image: linear-gradient(in lab, red, red)) {
      --tw-gradient-position: to top in oklab;
    }
    background-image: linear-gradient(var(--tw-gradient-stops));
  }
  .from-sky-50-50 {
    --tw-gradient-from: var(---color-sky-50-50);
    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
  }
  .to-primary-50-50 {
    --tw-gradient-to: var(---color-primary-50-50);
    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
  }
}

@property --tw-gradient-position {
  syntax: "*";
  inherits: false;
}
@property --tw-gradient-from {
  syntax: "<color>";
  inherits: false;
  initial-value: #0000;
}
@property --tw-gradient-via {
  syntax: "<color>";
  inherits: false;
  initial-value: #0000;
}
@property --tw-gradient-to {
  syntax: "<color>";
  inherits: false;
  initial-value: #0000;
}
@property --tw-gradient-stops {
  syntax: "*";
  inherits: false;
}
@property --tw-gradient-via-stops {
  syntax: "*";
  inherits: false;
}
@property --tw-gradient-from-position {
  syntax: "<length-percentage>";
  inherits: false;
  initial-value: 0%;
}
@property --tw-gradient-via-position {
  syntax: "<length-percentage>";
  inherits: false;
  initial-value: 50%;
}
@property --tw-gradient-to-position {
  syntax: "<length-percentage>";
  inherits: false;
  initial-value: 100%;
}

@keyframes spin {
  to {
    transform: rotate(360deg);
  }
}
",
  "styles": [],
  "variables": [
    "--animate-spin",
  ],
}
`;

exports[`compiler > . 2`] = `
{
  "candidates": [],
  "css": undefined,
  "styles": [],
  "variables": [],
}
`;

exports[`compiler > . 3`] = `
{
  "candidates": [
    "dark:bg-red-50",
  ],
  "css": "@layer properties, theme, base, components, utilities;
@layer theme {
  :where(:root,:host) {
    --color-red-50: oklch(97.1% 0.013 17.38);
  }
}

@layer utilities {
  .dark\\:bg-red-50 {
    &:not(.light, .light *, .dark, .dark *) {
      @media (prefers-color-scheme: dark) {
        background-color: var(--color-red-50);
      }
    }
    &:is(.dark, .dark *) {
      background-color: var(--color-red-50);
    }
  }
}
",
  "styles": [],
  "variables": [
    "--color-red-50",
  ],
}
`;

exports[`compiler > . 4`] = `
{
  "candidates": [],
  "css": undefined,
  "styles": [],
  "variables": [],
}
`;

exports[`compiler > . 5`] = `
{
  "candidates": [],
  "css": undefined,
  "styles": [],
  "variables": [],
}
`;

exports[`compiler > . 6`] = `
{
  "candidates": [
    "content-auto-test",
    "pointer-coarse-test:relative",
  ],
  "css": "@layer properties, theme, base, components, utilities;
@layer utilities {
  .content-auto-test {
    content-visibility: auto;
  }
  .pointer-coarse-test\\:relative {
    @media (pointer: coarse) {
      position: relative;
    }
  }
}
",
  "styles": [],
  "variables": [],
}
`;

exports[`compiler > . 7`] = `
{
  "candidates": [
    "animate-spin",
    "rounded-xl",
  ],
  "css": "@layer properties, theme, base, components, utilities;
@layer theme {
  :where(:root,:host) {
    --radius-xl: 0.75rem;
    --animate-spin: spin 1s linear infinite;
  }
}

@layer utilities {
  .animate-spin {
    animation: var(--animate-spin);
  }
  .rounded-xl {
    border-radius: var(--radius-xl);
  }
}

@keyframes spin {
  to {
    transform: rotate(360deg);
  }
}
",
  "styles": [],
  "variables": [
    "--radius-xl",
    "--animate-spin",
  ],
}
`;

exports[`compiler > . 8`] = `
{
  "candidates": [
    "relative",
  ],
  "css": "@layer properties, theme, base, components, utilities;
@layer utilities {
  .relative {
    position: relative;
  }
}
",
  "styles": [],
  "variables": [],
}
`;

exports[`compiler > . 9`] = `
{
  "candidates": [],
  "css": undefined,
  "styles": [
    ":root {
  &:not(.light, .light *, .dark, .dark *) {
    @media (prefers-color-scheme: dark) {
      background-color: var(--color-amber-200);
    }
  }
  &:is(.dark, .dark *) {
    background-color: var(--color-amber-200);
  }
  background-color: var(--color-amber-50);
  margin: calc(var(--spacing) * 4);
  background-color: color-mix(in srgb, oklch(13% 0.028 261.692) 10%, transparent);
  @supports (color: color-mix(in lab, red, red)) {
    background-color: color-mix(in oklab, var(--color-gray-950) 10%, transparent);
  }
}
",
  ],
  "variables": [
    "--color-amber-50",
    "--color-amber-200",
    "--color-gray-950",
    "--spacing",
  ],
}
`;

exports[`compiler > . 10`] = `
{
  "candidates": [],
  "css": undefined,
  "styles": [],
  "variables": [],
}
`;

exports[`compiler > . 11`] = `
{
  "candidates": [],
  "css": undefined,
  "styles": [],
  "variables": [
    "--color-red-500",
  ],
}
`;
